# shaders

lib/boost_1_60_0/stage/lib/: libboost_filesystem-vc140-mt-1_60.lib  libboost_system-vc140-mt-1_60.lib  libboost_system-vc140-mt-gd-1_60.lib
src/: CMakeLists.txt  ads.frag  ads.vert  basic.frag  basic.vert  diffuse.vert  error.hpp  errors.hpp  glsl_exception.hpp  glsl_program.cpp  glsl_program.hpp  main.cpp
